Working again turns txt back into code